fix overflow x

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,4 @@
+@import "bootstrap-mixin";
 
 .content {
     min-width: 100%;
@@ -10,4 +11,9 @@
     left: 0;
     right: 0;
     z-index: 1;
+
+
+    @include media-breakpoint-down(md) {
+      overflow-x: hidden;
+    }
 }
