--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -169,5 +169,5 @@ $top-header-level: 999;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: inherit;
+  height: fit-content;
 }
